# Yet-Another-Tokenizer-Generator

./: CMakeLists.txt  README.md
Scanning/: Main.cpp
Scanning/FileHandling/: FileReader.cpp  FileReader.h  Lexeme.h  Token.h  TokenHelper.h
Scanning/NFAandRegexUtils/: AcceptState.h  NFA.cpp  NFA.h  Node.cpp  Node.h  ScanHelper.h
Scanning/ParserFuncs/: RecursiveDescentParser.h
Scanning/TestInputs/: TestInput1.txt  TestProgram.txt
Scanning/TokenAndLexemeUtils/: Lexeme.h  Token.h  TokenHelper.h
